<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>jp.co.ndensan.reams.db</groupId>
    <artifactId>db</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>DB</name>

    <parent>
        <groupId>jp.co.ndensan.reams.commonpom</groupId>
        <artifactId>commonpom</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <modules>
        <module>DBA/standard</module>
        <module>DBB/standard</module>
        <module>DBC/standard</module>
        <module>DBD/standard</module>
        <module>DBE/standard</module>
        <module>DBU/standard</module>
        <module>DBZ/standard</module>
        <module>DBX/standard</module>
    </modules>

    <repositories>
        <repository>
            <id>kibanJenkins</id>
            <name>r5 maven repository</name>
            <url>http://221.6.25.212:8000/mvn/repo/</url>
            <releases>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>
    <properties>
        <!--  自業務公開系 DBXのバージョンと一致させること -->
        <jp.co.ndensan.reams.dbxVersion>1.12.0</jp.co.ndensan.reams.dbxVersion>
        <!-- UZ -->
        <jp.co.ndensan.reams.uzVersion>1.12.2</jp.co.ndensan.reams.uzVersion>
        <!-- 公開系 -->
        <jp.co.ndensan.reams.urVersion>1.12.0</jp.co.ndensan.reams.urVersion>
        <jp.co.ndensan.reams.uaxVersion>1.12.0</jp.co.ndensan.reams.uaxVersion>
        <jp.co.ndensan.reams.uexVersion>1.12.0</jp.co.ndensan.reams.uexVersion>
        <jp.co.ndensan.reams.uxxVersion>1.12.0</jp.co.ndensan.reams.uxxVersion>
        <jp.co.ndensan.reams.caxVersion>1.12.1</jp.co.ndensan.reams.caxVersion>
        <jp.co.ndensan.reams.aaxVersion>1.12.0</jp.co.ndensan.reams.aaxVersion>
        <!-- other -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <!-- ツール -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- UA -->
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxDefinition</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxEntity</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxBusiness</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxService</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
                <exclusions>
                    <exclusion>
                        <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                        <artifactId>UaxPersistence</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxPersistence</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ua.uax</groupId>
                <artifactId>UaxDivController</artifactId>
                <version>${jp.co.ndensan.reams.uaxVersion}</version>
                <classifier>classes</classifier>
            </dependency>
            <!-- UEX -->
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexDefinition</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexEntity</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexBusiness</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexService</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
                <exclusions>
                    <exclusion>
                        <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                        <artifactId>UexPersistence</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexPersistence</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
            </dependency>            
            <dependency>
                <groupId>jp.co.ndensan.reams.ue.uex</groupId>
                <artifactId>UexDivController</artifactId>
                <version>${jp.co.ndensan.reams.uexVersion}</version>
                <classifier>classes</classifier>
            </dependency>
            <!-- UXX -->
            <dependency>
                <groupId>jp.co.ndensan.reams.ux.uxx</groupId>
                <artifactId>UxxDefinition</artifactId>
                <version>${jp.co.ndensan.reams.uxxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ux.uxx</groupId>
                <artifactId>UxxEntity</artifactId>
                <version>${jp.co.ndensan.reams.uxxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ux.uxx</groupId>
                <artifactId>UxxBusiness</artifactId>
                <version>${jp.co.ndensan.reams.uxxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ux.uxx</groupId>
                <artifactId>UxxService</artifactId>
                <version>${jp.co.ndensan.reams.uxxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ca.cax</groupId>
                <artifactId>CaxBusiness</artifactId>
                <version>${jp.co.ndensan.reams.caxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ca.cax</groupId>
                <artifactId>CaxService</artifactId>
                <version>${jp.co.ndensan.reams.caxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ca.cax</groupId>
                <artifactId>CaxEntity</artifactId>
                <version>${jp.co.ndensan.reams.caxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ca.cax</groupId>
                <artifactId>CaxPersistence</artifactId>
                <version>${jp.co.ndensan.reams.caxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.ca.cax</groupId>
                <artifactId>CaxBatchController</artifactId>
                <version>${jp.co.ndensan.reams.caxVersion}</version>
            </dependency>
            <dependency>
                <groupId>jp.co.ndensan.reams.aa.aax</groupId>
                <artifactId>AaxService</artifactId>
                <version>${jp.co.ndensan.reams.aaxVersion}</version>
            </dependency>
            <!-- ツール -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.14.8</version>
                <type>jar</type>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <argLine>-XX:+UseG1GC -XX:G1HeapRegionSize=8m -Xmx2048m -XX:MaxPermSize=1024m -XX:ReservedCodeCacheSize=256m -noverify</argLine>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <attachClasses>true</attachClasses>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>7.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.6.3.201306030806</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>jp.co.ndensan.reams.uz.maven.plugins</groupId>
                <artifactId>myBatis-maven-plugin</artifactId>
                <version>1.9.1</version>
            </plugin>
            <plugin>
                <groupId>jp.co.ndensan.reams.uz.maven.plugins</groupId>
                <artifactId>myBatisValidator-maven-plugin</artifactId>
                <version>1.10.0</version>
                <dependencies>
                    <dependency>
                        <groupId>jp.co.ndensan.reams.uz</groupId>
                        <artifactId>framework</artifactId>
                        <version>1.9.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>jp.co.ndensan.reams.uz.maven.plugins</groupId>
                <artifactId>myBatisValidator-maven-plugin</artifactId>
                <version>1.10.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>createMyBatisSettings</goal>
                        </goals>
                        <phase>prepare-package</phase>
                    </execution>
                </executions>
                <configuration>
                    <checkmode>full</checkmode>  
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>2.4</version>
            </extension>
        </extensions>
    </build>
</project>